@@ -262,6 +262,7 @@ TITLE_${FILE}      != echo "${TITLE}" |sed -e 's|</a> <a|</a>, <a|g' -e 's/\"/\\
 TMSTMP_${FILE}     != echo ${DB_${FILE}:S/^${DBDIR}\///}| cut -d ',' -f 1
 POSTDATE_${FILE}   != ${date} -d "@${TMSTMP_${FILE}}" +'${DATE_FORMAT}'
 SHORTDATE_${FILE}  != ${date} -d "@${TMSTMP_${FILE}}" +'${SHORT_DATE_FORMAT}'
+DATETIME_${FILE}   != ${date} -d "@${TMSTMP_${FILE}}" +'%Y-%m-%dT%H:%M'
 DESC_${FILE}       != echo "${DESCRIPTION:S/'/\'/}" |sed -e 's|</a> <a|</a>, <a|g' -e 's/\"/\\"/g'
 TAGS_${FILE}       != echo ${TAGS} |sed -e 's/\([0-9a-zA-Z]*\) \([0-9a-zA-Z]*\)/\1_\2/g' -e 's/^_//g' -e 's/_$$//g' -e 's/,_/, /g' -e 's/_,/ ,/g' -e 's/,/ /g'
 CLASS_TYPE_${FILE} != echo ${TYPE}
@@ -305,6 +306,7 @@ TITLE_${FILE}      != echo "${TITLE}" |sed -e 's|</a> <a|</a>, <a|g' -e 's/\"/\\
 TMSTMP_${FILE}     != echo ${FILE}| cut -d ',' -f 1
 POSTDATE_${FILE}   != ${date} -d "@${TMSTMP_${FILE}}" +'${DATE_FORMAT}'
 SHORTDATE_${FILE}  != ${date} -d "@${TMSTMP_${FILE}}" +'${SHORT_DATE_FORMAT}'
+DATETIME_${FILE}   != ${date} -d "@${TMSTMP_${FILE}}" +'%Y-%m-%dT%H:%M'
 NAME_${FILE}       != echo ${FILE}| sed -e 's|.mk$$|${PAGE_EXT}|' -e 's|^.*,||'
 DESC_${FILE}       != echo "${DESCRIPTION:S/'/\'/}" |sed -e 's|</a> <a|</a>, <a|g' -e 's/\"/\\"/g'
 CONTENT_${FILE}    != ${markdown} ${SRCDIR}/${NAME_${FILE}:S/${PAGE_EXT}$/.md/} |sed -e 's/\"/\\"/g' -e 's|`|``\\`|g'
@@ -337,6 +339,7 @@ ${TMP_${FILE}}: ${TMPDIR} ${POSTDIR} ${TARGET_${NAME_${FILE}}}
 		"DATE=${POSTDATE_${FILE}}"                 \
 		"POST_FILE=${NAME_${FILE}}"                \
 		"SHORT_DATE=${SHORTDATE_${FILE}}"          \
+		"DATETIME=${DATETIME_${FILE}}"             \
 		"TAG_LINKS_LIST=${TAGLIST_${FILE}}"        \
 		"POST_AUTHOR=${AUTHOR_${FILE}}"            \
 		"ARTICLE_CLASS_TYPE=${CLASS_TYPE_${FILE}}" \
@@ -347,6 +350,7 @@ ${TMP_${FILE}}: ${TMPDIR} ${POSTDIR} ${TARGET_${NAME_${FILE}}}
 		"TITLE=${TITLE_${FILE}}"                      \
 		"POST_FILE=${NAME_${FILE}}"                   \
 		"DATE=${POSTDATE_${FILE}}"                    \
+		"DATETIME=${DATETIME_${FILE}}"                \
 		"TAG_LINKS_LIST=${TAGLIST_${FILE}}"           \
 		"POST_TITLE=${TITLE_${FILE}}"                 \
 		"POST_AUTHOR=${AUTHOR_${FILE}}"               \
@@ -356,6 +360,7 @@ ${TMP_${FILE}}: ${TMPDIR} ${POSTDIR} ${TARGET_${NAME_${FILE}}}
 	$Qcat ${POSTDIR}/${NAME_${FILE}} | ${parser} ${parser_opts} \
 		"TITLE=${TITLE_${FILE}}"                   \
 		"DATE=${POSTDATE_${FILE}}"                 \
+		"DATETIME=${DATETIME_${FILE}}"             \
 		"POST_FILE=${NAME_${FILE}}"                \
 		"TAG_LINKS_LIST=${TAGLIST_${FILE}}"        \
 		> ${TMPDIR}/${NAME_${FILE}}
@@ -381,6 +386,7 @@ ${TMP_${FILE}}: ${TMPDIR} ${POSTDIR} ${TARGET_${NAME_${FILE}}}
 			"DATE=${POSTDATE_${FILE}}"                 \
 			"POST_FILE=${NAME_${FILE}}"                \
 			"SHORT_DATE=${SHORTDATE_${FILE}}"          \
+			"DATETIME=${DATETIME_${FILE}}"             \
 			"TAG_LINKS_LIST=${TAGLIST_${FILE}}"        \
 			"POST_AUTHOR=${AUTHOR_${FILE}}"            \
 		>> ${TMPDIR}/$${TAG}.tag; \
