@@ -293,6 +293,8 @@ Available variables:
   * ${CONTENT}: Content of page/post. It often looks like a post content. But it could be another kind of content as a tag list, a post list, etc. This depends on the page you're editing.
   * ${CSS\_FILE}: Name of CSS file. For an example *simple.css*.
   * ${CSS\_NAME}: Name that will appears to user when it selects your CSS theme. For an example *default theme*.
+  * ${DATE}: Date using ${DATE\_FORMAT} format.
+  * ${DATETIME}: Date using ISO8601 format to be compatible with HTML5 *time* tag.
   * ${HOME\_TITLE}: Title that will appears on the link that redirect to homepage. For an example *Home*.
   * ${LANG}: Country code used in HTML's page to define a language. For an example *en* for english, *fr* for *french*, etc.
   * ${POSTDIR\_INDEX}: Exact name of postdir's index page. For an example *index.html*.
