@@ -2,7 +2,7 @@
         <header class="entry-header">
             <div class="entry-meta">
               <h1 class="entry-title"><a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${POST_TITLE}</a></h1>
-              <time class="entry-date"><a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${DATE}</a></time>
+              <time class="entry-date" datetime="${DATETIME}"><a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${DATE}</a></time>
               <span class="tag-links">
                 ${TAG_LINKS_LIST}
               </span>
